@@ -54,6 +54,8 @@ debhelper (9.20150101.1) UNRELEASED; urgency=medium
   * dh_install, dh_installdocs, dh_installexamples and dh_installinfo:
     Pass --reflink=auto to cp.  On supported filesystems, this provides
     faster copying.
+  * Make perl tests verbose.  Thanks to gregor herrmann for the patch.
+    (Closes: #714546)
 
   [ Bernhard R. Link ]
   * Dh_lib: apply patch from Guillem Jover to support case-insensitive
